[gd_scene load_steps=3 format=3 uid="uid://bua44ga28eah4"]

[ext_resource type="Script" path="res://scripts/checkpoint.gd" id="1_xcwac"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5ak0"]
size = Vector2(38, 171)

[node name="Checkpoint" type="Area2D"]
script = ExtResource("1_xcwac")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -51)
shape = SubResource("RectangleShape2D_w5ak0")

[node name="RespawnPointIzquierda" type="Marker2D" parent="."]
position = Vector2(74, -97)

[node name="RespawnPointDerecha" type="Marker2D" parent="."]
position = Vector2(194, -97)

[node name="RespawnPointOjo" type="Marker2D" parent="."]
position = Vector2(134, -60)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
